--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
   <packaging>pom</packaging>
   <name>JOMC Standalone</name>
   <description>JOMC standalone environment.</description>
-  <url>http://jomc.sourceforge.net/jomc-standalone/${pom.version}</url>
+  <url>http://jomc.sourceforge.net/jomc-standalone/${project.version}</url>
   <prerequisites>
     <maven>2.0.9</maven>
   </prerequisites>
@@ -128,7 +128,13 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.3</version>
+          <version>2.4.1</version>
+          <configuration>
+            <delimiters>
+              <delimiter>${*}</delimiter>
+            </delimiters>
+            <useDefaultDelimiters>false</useDefaultDelimiters>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -188,7 +194,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jarsigner-plugin</artifactId>
-          <version>1.1</version>
+          <version>1.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -206,15 +212,18 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.6</version>
+          <version>2.6.1</version>
           <configuration>
             <breakiterator>true</breakiterator>
             <keywords>true</keywords>
             <linksource>true</linksource>
             <serialwarn>true</serialwarn>
             <source>1.5</source>
-            <doctitle>${pom.name} Specification ${pom.version}</doctitle>
-            <windowtitle>${pom.name} Specification ${pom.version}</windowtitle>
+            <doctitle>${project.name} ${project.version}</doctitle>
+            <windowtitle>${project.name} ${project.version}</windowtitle>
+            <detectJavaApiLink>true</detectJavaApiLink>
+            <detectOfflineLinks>false</detectOfflineLinks>
+            <!-- <detectLinks>true</detectLinks> Disabled due to http://jira.codehaus.org/browse/MJAVADOC-273 -->
             <archive>
               <index>true</index>
               <addMavenDescriptor>false</addMavenDescriptor>
@@ -282,7 +291,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.1</version>
+          <version>2.1.1</version>
           <configuration>
             <archive>
               <index>true</index>
@@ -309,32 +318,6 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.0-beta-1</version>
-          <executions>
-            <execution>
-              <id>enforce</id>
-              <goals>
-                <goal>enforce</goal>
-              </goals>
-              <configuration>
-                <rules>
-                  <requireProperty>
-                    <property>project.build.sourceEncoding</property>
-                    <message>Must set 'project.build.sourceEncoding'.</message>
-                  </requireProperty>
-                  <requireProperty>
-                    <property>project.reporting.outputEncoding</property>
-                    <message>Must set 'project.reporting.outputEncoding'.</message>
-                  </requireProperty>
-                </rules>
-                <fail>true</fail>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-scm-plugin</artifactId>
           <version>1.2</version>
           <configuration>
@@ -346,10 +329,6 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -439,7 +418,7 @@
       <dependency>
         <groupId>org.apache.geronimo.components</groupId>
         <artifactId>geronimo-transaction</artifactId>
-        <version>2.1.2</version>
+        <version>2.1.3</version>
       </dependency>
       <dependency>
         <groupId>org.ow2.jotm</groupId>
@@ -487,7 +466,7 @@
     <site>
       <id>www.jomc.org</id>
       <name>JOMC Site</name>
-      <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${pom.version}</url>
+      <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${project.version}</url>
     </site>
   </distributionManagement>
   <reporting>
@@ -500,7 +479,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.6.1</version>
         <reportSets>
           <reportSet>
             <id>javadoc</id>
@@ -515,8 +494,11 @@
               <linksource>true</linksource>
               <serialwarn>true</serialwarn>
               <source>1.5</source>
-              <doctitle>${pom.name} Specification ${pom.version}</doctitle>
-              <windowtitle>${pom.name} Specification ${pom.version}</windowtitle>
+              <doctitle>${project.name} ${project.version}</doctitle>
+              <windowtitle>${project.name} ${project.version}</windowtitle>
+              <detectJavaApiLink>true</detectJavaApiLink>
+              <detectOfflineLinks>false</detectOfflineLinks>
+              <!-- <detectLinks>true</detectLinks> Disabled due to http://jira.codehaus.org/browse/MJAVADOC-273 -->
             </configuration>
           </reportSet>
         </reportSets>
@@ -578,6 +560,14 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>emma-maven-plugin</artifactId>
         <version>1.0-alpha-2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>clirr-maven-plugin</artifactId>
+        <version>2.2.2</version>
+        <configuration>
+          <minSeverity>info</minSeverity>
+        </configuration>
       </plugin>
     </plugins>
   </reporting>
@@ -698,4 +688,8 @@
   <modules>
     <module>jomc-standalone-ri</module>
   </modules>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
 </project>
