--- a/pom.xml
+++ b/pom.xml
@@ -536,6 +536,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
         <version>2.2</version>
+        <!-- version>2.3</version Upgrade breaks changes report due to http://jira.codehaus.org/browse/MCHANGES-190 -->
+        <inherited>false</inherited>
         <configuration>
           <issueLinkTemplatePerSystem>
             <MantisBT>http://apps.sourceforge.net/mantisbt/jomc/view.php?id=%ISSUE%</MantisBT>
@@ -690,6 +692,6 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jomc.version>1.0-alpha-11</jomc.version>
+    <jomc.version>1.0-alpha-12</jomc.version>
   </properties>
 </project>
