--- a/pom.xml
+++ b/pom.xml
@@ -236,7 +236,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>2.3</version>
+          <version>2.4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -317,7 +317,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-scm-plugin</artifactId>
-          <version>1.2</version>
+          <version>1.3</version>
           <configuration>
             <message>[maven-scm-plugin] Build ${buildNumber}</message>
             <username>${jomc.scm.username}</username>
@@ -328,6 +328,11 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>xml-maven-plugin</artifactId>
           <version>1.0-beta-3</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -525,7 +530,7 @@
       <dependency>
         <groupId>org.ow2.jotm</groupId>
         <artifactId>jotm-core</artifactId>
-        <version>2.1.8</version>
+        <version>2.1.9</version>
       </dependency>
       <dependency>
         <groupId>com.experlog</groupId>
@@ -795,8 +800,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jomc.version>1.0-alpha-14-SNAPSHOT</jomc.version>
-    <jomc-logging.version>1.0-alpha-8-SNAPSHOT</jomc-logging.version>
+    <jomc.version>1.0-alpha-14</jomc.version>
+    <jomc-logging.version>1.0-alpha-8</jomc-logging.version>
     <jomc-build.version>1.3</jomc-build.version>
     <logger.specification.version>1.0</logger.specification.version>
   </properties>
