--- a/jomc-standalone-ri/pom.xml
+++ b/jomc-standalone-ri/pom.xml
@@ -84,11 +84,6 @@
   <dependencies>
     <dependency>
       <groupId>org.jomc</groupId>
-      <artifactId>jomc-util</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jomc</groupId>
       <artifactId>jomc-model</artifactId>
       <scope>compile</scope>
     </dependency>
@@ -108,15 +103,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.jomc.logging</groupId>
-      <artifactId>jomc-logging-api</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.jomc.standalone</groupId>
       <artifactId>jomc-standalone-model</artifactId>
       <scope>compile</scope>
     </dependency>
+    
     <dependency>
       <groupId>javax.persistence</groupId>
       <artifactId>persistence-api</artifactId>
@@ -130,18 +121,25 @@
     <dependency>
       <groupId>javax.jms</groupId>
       <artifactId>jms</artifactId>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.resource</groupId>
       <artifactId>connector-api</artifactId>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.jboss.transaction</groupId>
       <artifactId>jboss-jta</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.transaction</groupId>
+      <artifactId>jboss-jts-common</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.geronimo.components</groupId>
       <artifactId>geronimo-transaction</artifactId>
@@ -157,6 +155,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.ow2.jotm</groupId>
       <artifactId>jotm-core</artifactId>
@@ -166,24 +165,39 @@
           <groupId>org.ow2.spec.ee</groupId>
           <artifactId>ow2-jta-1.1-spec</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging-api</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>com.experlog</groupId>
       <artifactId>xapool</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
+          <groupId>org.hibernate</groupId>
+          <artifactId>ejb3-persistence</artifactId>
+        </exclusion>
+        <exclusion>
           <groupId>javax.transaction</groupId>
           <artifactId>jta</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.apache.openjpa</groupId>
       <artifactId>openjpa</artifactId>
@@ -203,15 +217,50 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>toplink.essentials</groupId>
       <artifactId>toplink-essentials</artifactId>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.persistence</groupId>
+          <artifactId>persistence-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.jomc.logging</groupId>
       <artifactId>jomc-logging-jdk-logging</artifactId>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
+  <profiles>
+    <profile>
+      <id>jdk15</id>
+      <activation>
+        <jdk>1.5</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>jsr250-api</artifactId>
+          <scope>compile</scope>
+          <optional>true</optional>
+        </dependency>
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <scope>compile</scope>
+        </dependency>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
