--- a/pom.xml
+++ b/pom.xml
@@ -590,6 +590,11 @@
         <version>4.2.3.SP7</version>
       </dependency>
       <dependency>
+        <groupId>org.jboss.transaction</groupId>
+        <artifactId>jboss-jts-common</artifactId>
+        <version>4.2.3.SP7</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.geronimo.components</groupId>
         <artifactId>geronimo-transaction</artifactId>
         <version>2.1.3</version>
@@ -624,7 +629,7 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.1</version>
+        <version>2.2</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.stream</groupId>
@@ -634,17 +639,12 @@
       <dependency>
         <groupId>javax.activation</groupId>
         <artifactId>activation</artifactId>
-        <version>1.1</version>
+        <version>1.1.1</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.1.12</version>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb-xjc</artifactId>
-        <version>2.1.12</version>
+        <version>2.2</version>
       </dependency>
 
       <!-- Misc -->
@@ -653,6 +653,33 @@
         <artifactId>jsr250-api</artifactId>
         <version>1.0</version>
         <optional>true</optional>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.5.10</version>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.14</version>
+      </dependency>
+
+      <!-- Commons -->
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.4</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+        <version>3.2.1</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.1.1</version>
       </dependency>
 
       <!-- Standalone -->
@@ -812,16 +839,6 @@
           <artifactId>jsr250-api</artifactId>
           <scope>compile</scope>
           <optional>true</optional>
-        </dependency>
-        <dependency>
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-impl</artifactId>
-          <scope>runtime</scope>
         </dependency>
       </dependencies>
     </profile>
