--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.4.1</version>
+          <version>2.4.2</version>
           <configuration>
             <delimiters>
               <delimiter>${*}</delimiter>
@@ -331,7 +331,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.4</version>
+          <version>1.5</version>
           <executions>
             <execution>
               <goals>
@@ -373,7 +373,7 @@
             <dependency>
               <groupId>net.sourceforge.ccxjc</groupId>
               <artifactId>cc-xjc-plugin</artifactId>
-              <version>1.2</version>
+              <version>1.3</version>
             </dependency>
           </dependencies>
           <executions>
@@ -652,7 +652,7 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.5.10</version>
+        <version>1.5.11</version>
       </dependency>
       <dependency>
         <groupId>log4j</groupId>
@@ -692,24 +692,24 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.7</version>
+        <version>4.8.1</version>
       </dependency>
 
     </dependencies>
   </dependencyManagement>
   <distributionManagement>
     <repository>
-      <id>repository.jomc.org</id>
-      <name>JOMC Maven 2 Repository</name>
-      <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/maven2/releases</url>
+      <id>sonatype-nexus-staging</id>
+      <name>Sonatype Nexus Release Repository</name>
+      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
     </repository>
     <snapshotRepository>
-      <id>snapshots.jomc.org</id>
-      <name>JOMC Maven 2 Snapshot Repository</name>
-      <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/maven2/snapshots</url>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <site>
-      <id>www.jomc.org</id>
+      <id>jomc.sourceforge.net</id>
       <name>JOMC Site</name>
       <url>scp://shell.sourceforge.net/home/groups/j/jo/jomc/htdocs/jomc-standalone/${project.version}</url>
     </site>
