--- a/pom.xml
+++ b/pom.xml
@@ -933,6 +933,10 @@
           </plugin>
         </plugins>
       </build>
+      <properties>
+        <jomc.sourceProcessing>false</jomc.sourceProcessing>
+        <jomc.verbose>true</jomc.verbose>
+      </properties>
     </profile>
   </profiles>
   <modules>
@@ -944,7 +948,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
     <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
-    <jomc.version>1.0-alpha-17-SNAPSHOT</jomc.version>
+    <jomc.version>1.0-alpha-17</jomc.version>
     <jomc-build.version>1.3</jomc-build.version>
     <surefire.version>2.5</surefire.version>
     <emma-maven-plugin.version>1.0-alpha-2</emma-maven-plugin.version>
