--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jomc.standalone</groupId>
   <artifactId>jomc-standalone</artifactId>
-  <version>1.0-alpha-7</version>
+  <version>1.0-alpha-8-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JOMC Standalone</name>
   <description>Standalone environment.</description>
@@ -92,9 +92,9 @@
     </mailingList>
   </mailingLists>
   <scm>
-    <connection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/tags/jomc-standalone-1.0-alpha-7</connection>
-    <developerConnection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/tags/jomc-standalone-1.0-alpha-7</developerConnection>
-    <url>http://jomc.svn.sourceforge.net/viewvc/jomc/jomc-standalone/tags/jomc-standalone-1.0-alpha-7</url>
+    <connection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</connection>
+    <developerConnection>scm:svn:https://jomc.svn.sourceforge.net/svnroot/jomc/jomc-standalone/trunk</developerConnection>
+    <url>http://jomc.svn.sourceforge.net/viewvc/jomc/jomc-standalone/trunk/</url>
   </scm>
   <build>
     <extensions>
@@ -660,12 +660,12 @@
       <dependency>
         <groupId>org.jomc.standalone</groupId>
         <artifactId>jomc-standalone-model</artifactId>
-        <version>1.0-alpha-7</version>
+        <version>1.0-alpha-8-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.jomc.standalone</groupId>
         <artifactId>jomc-standalone-ri</artifactId>
-        <version>1.0-alpha-7</version>
+        <version>1.0-alpha-8-SNAPSHOT</version>
       </dependency>
 
       <dependency>
