--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jomc.standalone</groupId>
   <artifactId>jomc-standalone</artifactId>
-  <version>1.0-alpha-10-SNAPSHOT</version>
+  <version>1.0-beta-1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JOMC Standalone</name>
   <description>Standalone environment.</description>
@@ -666,12 +666,12 @@
       <dependency>
         <groupId>org.jomc.standalone</groupId>
         <artifactId>jomc-standalone-model</artifactId>
-        <version>1.0-alpha-10-SNAPSHOT</version>
+        <version>1.0-beta-1-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.jomc.standalone</groupId>
         <artifactId>jomc-standalone-ri</artifactId>
-        <version>1.0-alpha-10-SNAPSHOT</version>
+        <version>1.0-beta-1-SNAPSHOT</version>
       </dependency>
 
       <dependency>
@@ -954,7 +954,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <xjcOutputDirectory>${project.build.directory}/generated-sources/jaxb</xjcOutputDirectory>
     <remoteResourcesOutputDirectory>${project.build.directory}/maven-shared-archive-resources</remoteResourcesOutputDirectory>
-    <jomc.version>1.0-alpha-19</jomc.version>
+    <jomc.version>1.0-beta-1</jomc.version>
     <jomc-build.version>1.4</jomc-build.version>
     <surefire.version>2.5</surefire.version>
     <emma-maven-plugin.version>1.0-alpha-2</emma-maven-plugin.version>
