--- a/jomc-standalone-ri/pom.xml
+++ b/jomc-standalone-ri/pom.xml
@@ -36,7 +36,7 @@
   <parent>
     <groupId>org.jomc.standalone</groupId>
     <artifactId>jomc-standalone</artifactId>
-    <version>1.0-beta-1</version>
+    <version>1.0-beta-2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jomc-standalone-ri</artifactId>
